--- a/css/bundle.css
+++ b/css/bundle.css
@@ -1,12 +1,12 @@
 body {
-	background-color: #222222;
+	background-color: black;
 	width: 100%;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
 
 canvas {
-	background-color: #222222;
+	background-color: black;
 }
 
 
@@ -255,6 +255,12 @@ canvas {
 		-2px 0px 0 #FFFFFF,
 		0px -2px 0 #FFFFFF;
 	line-height: 0.8;
+}
+
+.backgroundFade{
+    -webkit-transition: background-color 700ms ease;
+    -ms-transition: background-color 700ms ease;
+    transition: background-color 700ms ease;
 }
 #game-canvas:-moz-full-screen {
   -moz-transform-origin:50% 50% 0;
